--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,10 +15,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1
+      uses: microsoft/setup-msbuild
 
     - name: Setup NuGet
-      uses: NuGet/setup-nuget@v6.14.0
+      uses: NuGet/setup-nuget
     
     - name: Navigate to Workspace
       run: cd $GITHUB_WORKSPACE
