--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,38 +1,30 @@
-name: Local NuGet Pack (.NET 4.8.1)
+name: Build and Tests
 
-on:
+on:  
   push:
-    branches:
-      - master
-  workflow_dispatch:
-
-jobs:
-  build-pack:
+    branches: [ master ]
+ 
+jobs:  
+  build:    
     runs-on: windows-latest
+    
+    steps:      
+      - uses: actions/checkout@v2
+      
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1
 
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
+      - name: Setup NuGet
+        uses: NuGet/setup-nuget@v1.0.5
+        
+      - name: Setup VSTest
+        uses: darenm/Setup-VSTest@v1
 
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1.3.1
+      - name: Restore NuGet Packages
+        run: nuget restore BOL.sln
 
-    - name: Setup NuGet
-      uses: NuGet/setup-nuget@v2
-
-    - name: Restore NuGet Packages
-      run: msbuild BOL.sln /t:Restore
-
-    - name: Build Solution (.NET 4.8.1)
-      run: msbuild BOL.sln /p:Configuration=Release /p:TargetFrameworkVersion=v4.8.1 /t:Rebuild
-
-    - name: Pack NuGet Package (Local Output)
-      run: |
-        nuget pack BOL.csproj -OutputDirectory ./nupkgs
-        echo "NuGet package(s) generated in ./nupkgs"
-
-    - name: Upload NuGet Package as Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: LocalNuGetPackage
-        path: ./nupkgs/*.nupkg
+      - name: Build Solution
+        run: msbuild.exe BOL.sln /p:Platform="Any CPU" /p:Configuration="Release"
+        
+      - name: Run Tests
+        run: vstest.console.exe .\tests\BOL.Tests\bin\Release\BOL.Tests.dll
