--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,18 +33,19 @@ jobs:
       - name: NuGet Pack DAL Project
         id: nuget_pack
         run: |
-          nuget pack DAL.csproj -OutputDirectory ./nupkgs
+          nuget pack BOL.csproj -OutputDirectory ./nupkgs
+          continue-on-error: true
           
       - name: Notify Google Chat - Pack Success
         if: steps.nuget_pack.outcome == 'success'
         run: |
-          $body = @{ text = "✅ NuGet Pack Success: DAL.nupkg created." } | ConvertTo-Json -Depth 10
+          $body = @{ text = "✅ NuGet Pack Success: BOL.nupkg created." } | ConvertTo-Json -Depth 10
           Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
 
       - name: Notify Google Chat - Pack Failure
         if: steps.nuget_pack.outcome == 'failure'
         run: |
-          $body = @{ text = "❌ DAL.nupkg Creation Failed!" } | ConvertTo-Json -Depth 10
+          $body = @{ text = "❌ BOL.nupkg Creation Failed!" } | ConvertTo-Json -Depth 10
           Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
 
       - name: Upload to Google Drive
