--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v1.0.5
 
-      - name: Setup VSTest
-        uses: darenm/Setup-VSTest@v1
+      # - name: Setup VSTest
+      #   uses: darenm/Setup-VSTest@v1
 
       - name: Restore NuGet Packages
         run: nuget restore BOL.sln
@@ -34,8 +34,7 @@ jobs:
         id: nuget_pack
         run: |
           nuget pack BOL.csproj -OutputDirectory ./nupkgs
-          continue-on-error: true
-          
+                   
       - name: Notify Google Chat - Pack Success
         if: steps.nuget_pack.outcome == 'success'
         run: |
