--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,10 +47,15 @@ jobs:
           $body = @{ text = "❌ BOL.nupkg Creation Failed!" } | ConvertTo-Json -Depth 10
           Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
 
-      - name: Upload to Google Drive
+      - name: Install Rclone
+        run: |
+          choco install rclone -y
+
+      - name: Upload .nupkg to Google Drive
         if: steps.nuget_pack.outcome == 'success'
-        uses: google-github-actions/upload-cloud-storage@v1
-        with:
-          credentials_json: ${{ secrets.GDRIVE_SERVICE_ACCOUNT_JSON }}
-          path: ./nupkgs/*.nupkg
-          destination: drive://1jN23YIU6aclDiZhFZliCLxzdW76-39fo/
+        env:
+          RCLONE_CONFIG_GDRIVE_TYPE: drive
+          RCLONE_CONFIG_GDRIVE_SCOPE: drive
+          RCLONE_CONFIG_GDRIVE_SERVICE_ACCOUNT_FILE: ${{ secrets.GDRIVE_SERVICE_ACCOUNT_JSON }}
+        run: |
+          rclone copy ./nupkgs GDRIVE:MyFolder --progress
